{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 14,
  "lineage": "52f690ee-e10d-1efb-1b6e-fde5612c2021",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c846debef94e83c2",
            "arn": "arn:aws:ec2:us-east-2:920375856513:instance/i-056efce4870013370",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056efce4870013370",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ikenna",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00f04230f6220a9d6"
              }
            ],
            "primary_network_interface_id": "eni-00f04230f6220a9d6",
            "private_dns": "ip-172-31-12-181.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.181",
            "public_dns": "ec2-3-139-81-252.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.81.252",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0231431ecb775a905",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "secgroup"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccd1410ccb46411c",
            "tags": {
              "Name": "IAC_Instance",
              "Project": "IAC"
            },
            "tags_all": {
              "Name": "IAC_Instance",
              "Project": "IAC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03aa643678e2ba08a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "i-056efce4870013370",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup",
            "data.aws_ami.ikenna"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group/sg-03aa643678e2ba08a",
            "description": "Security_Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03aa643678e2ba08a",
            "ingress": [
              {
                "cidr_blocks": [
                  "142.167.11.141/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secgroup",
            "name_prefix": "",
            "owner_id": "920375856513",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "firewall"
            },
            "tags_all": {
              "Name": "firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-00210d4a504a8a5d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sg-03aa643678e2ba08a",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Allow_outbound_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group-rule/sgr-08b8eaf52d804ea15",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08b8eaf52d804ea15",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-03aa643678e2ba08a",
            "security_group_rule_id": "sgr-08b8eaf52d804ea15",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sgr-08b8eaf52d804ea15",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "net_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group-rule/sgr-018121d023e7b431a",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-018121d023e7b431a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-03aa643678e2ba08a",
            "security_group_rule_id": "sgr-018121d023e7b431a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sgr-018121d023e7b431a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group-rule/sgr-003cb9bcd683c7d33",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-003cb9bcd683c7d33",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-03aa643678e2ba08a",
            "security_group_rule_id": "sgr-003cb9bcd683c7d33",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sgr-003cb9bcd683c7d33",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup"
          ]
        }
      ]
    }
  ]
}